Finally I uderstood how to write Hello World!

--- a/GameLife/GameLife.vcxproj.filters
+++ b/GameLife/GameLife.vcxproj.filters
@@ -22,4 +22,9 @@
       <Extensions>ts</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
