--- a/GameLife/GameLife.vcxproj.filters
+++ b/GameLife/GameLife.vcxproj.filters
@@ -23,6 +23,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="MyWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MyWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
