--- a/GameLife/GameLife.vcxproj
+++ b/GameLife/GameLife.vcxproj
@@ -99,6 +99,9 @@
   <ItemGroup>
     <ClCompile Include="MyWidget.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="GameLife.pro" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
