--- a/GameLife/GameLife.vcxproj
+++ b/GameLife/GameLife.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="MyWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.gitignore" />
     <None Include="GameLife.pro" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
