Add config file, click and timer event

--- a/GameLife/GameLife.vcxproj
+++ b/GameLife/GameLife.vcxproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameOfLifeSim.h" />
+    <ClInclude Include="Config.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
