--- a/GameLife/GameLife.vcxproj.filters
+++ b/GameLife/GameLife.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="GameOfLifeSim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
