--- a/GameLife/GameLife.vcxproj.filters
+++ b/GameLife/GameLife.vcxproj.filters
@@ -29,6 +29,9 @@
     <QtMoc Include="GameField.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="MyDialogWindow.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -41,6 +44,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameOfLifeSim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyDialogWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
